--- a/web/viewer.html
+++ b/web/viewer.html
@@ -162,15 +162,6 @@ See https://github.com/adobe-type-tools/cmap-resources
 
             <div class="horizontalToolbarSeparator"></div>
 
-            <button id="toggleHandTool" class="secondaryToolbarButton handTool" title="Enable hand tool" tabindex="60" data-l10n-id="hand_tool_enable">
-              <span data-l10n-id="hand_tool_enable_label">Enable hand tool</span>
-            </button>
-
-            <div class="horizontalToolbarSeparator"></div>
-
-            <button id="documentProperties" class="secondaryToolbarButton documentProperties" title="Document Properties…" tabindex="61" data-l10n-id="document_properties">
-              <span data-l10n-id="document_properties_label">Document Properties…</span>
-            </button>
           </div>
         </div>  <!-- secondaryToolbar -->
 
@@ -185,6 +176,21 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <button id="viewFind" class="toolbarButton group hiddenSmallView" title="Find in Document" tabindex="12" data-l10n-id="findbar">
                    <span data-l10n-id="findbar_label">Find</span>
                 </button>
+
+
+                <button id="toggleHandTool" class="toolbarButton handTool" title="Enable hand tool" tabindex="60" data-l10n-id="hand_tool_enable">
+                  <span data-l10n-id="hand_tool_enable_label">Enable hand tool</span>
+                </button>
+
+                <div class="toolbarButtonSpacer" id="toggleHandToolSpacer"></div>
+
+                <button id="documentProperties" class="toolbarButton documentProperties" title="Document Properties…" tabindex="61" data-l10n-id="document_properties">
+                  <span data-l10n-id="document_properties_label">Document Properties…</span>
+                </button>
+
+                <div class="toolbarButtonSpacer" id="documentPropertiesSpacer"></div>
+
+
                 <div class="splitToolbarButton">
                   <button class="toolbarButton pageUp" title="Previous Page" id="previous" tabindex="13" data-l10n-id="previous">
                     <span data-l10n-id="previous_label">Previous</span>
